k8s/app/overlays/dev/patches/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smt-ing
  annotations:
    cert-manager.io/cluster-issuer: seolmyeongtang-issuer-dev
    traefik.ingress.kubernetes.io/router.middlewares: smt-dev-ip-whitelist@kubernetescrd
spec:
  tls:
    - hosts:
        - dev-api.redundant4u.com
      secretName: api-redundant4u-tls-secret
  rules:
    - host: dev-api.redundant4u.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: smt
                port:
                  number: 8090
          - path: /vnc
            pathType: Prefix
            backend:
              service:
                name: vnc-proxy
                port:
                  number: 8080
